Fix wrong font family displaying for body text

--- a/src/extension/devtools/panel.css
+++ b/src/extension/devtools/panel.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 @layer base {
-  html {
+  html,
+  body {
     @apply font-body;
   }
 
